force-app/main/default/objects/Terms_and_Condition__c/Terms_and_Condition__c.object-meta.xml
<CustomObject>
    <label>Terms and Condition</label>
    <nameField>
        <displayFormat>T&amp;C-{0}</displayFormat>
        <label>Terms and Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Terms and Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>