force-app/main/default/objects/Terms_and_Condition__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Terms and Conditions</relationshipLabel>
    <relationshipName>Terms_and_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>