force-app/main/default/objects/Terms_and_Condition__c/fields/Excluded_from_PDF__c.field-meta.xml
<CustomField>
    <fullName>Excluded_from_PDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude from PDF</label>
    <type>Checkbox</type>
</CustomField>