force-app/main/default/objects/Terms_and_Condition__c/fields/Print_Order__c.field-meta.xml
<CustomField>
    <fullName>Print_Order__c</fullName>
    <label>Print Order</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>