force-app/main/default/objects/Terms_and_Condition__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Terms and Conditions</relationshipLabel>
    <relationshipName>Terms_and_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>