force-app/main/default/objects/Terms_and_Condition__c/fields/Quote_Term__c.field-meta.xml
<CustomField>
    <fullName>Quote_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Term</label>
    <referenceTo>SBQQ__QuoteTerm__c</referenceTo>
    <relationshipName>Terms_and_conditions</relationshipName>
    <type>Lookup</type>
</CustomField>