force-app/main/default/objects/Terms_and_Condition__c/fields/Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider__c</fullName>
    <label>Service Provider</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YILLP</fullName>
            </value>
            <value>
                <fullName>YNSPL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>