force-app/main/default/objects/Terms_and_Condition__c/validationRules/Cannot_Update_Terms_and_Condition.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Update_Terms_and_Condition</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL( Quote__r.SBQQ__Status__c , &apos;In Review&apos;) ,
        ISPICKVAL( Quote__r.SBQQ__Status__c , &apos;Approved&apos;) ,
        ISPICKVAL( Quote__r.SBQQ__Status__c , &apos;Customer Accepted&apos;) ,
        ISPICKVAL( Quote__r.SBQQ__Status__c , &apos;Customer Rejected&apos;) ,
        ISPICKVAL( Quote__r.SBQQ__Status__c , &apos;Presented&apos;) 
    ),
    NOT(ISCHANGED( LastModifiedDate )),
  $Profile.Name &lt;&gt; &quot;Yotta Order Management&quot;
)</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Cannot Update Terms and Condition once Quote is in approval or approved</errorMessage>
</ValidationRule>