force-app/main/default/objects/Terms_and_Condition__c/validationRules/Update_Terms_and_Condition.validationRule-meta.xml
<ValidationRule>
    <fullName>Update_Terms_and_Condition</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(Quote_Term__c )) &amp;&amp; 
Quote__r.Generated_Terms__c  &amp;&amp; 
    (
        ISCHANGED( Term_Name__c ) || 
        ISCHANGED( Term_Condition_Description__c )
    ) &amp;&amp; 
    NOT(ISNEW())</errorConditionFormula>
    <errorMessage>Cannot Update Existing Terms and Condition</errorMessage>
</ValidationRule>